<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HaitaoApp</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="info_details">Info</string>
    <string name="menu_export">Export Ac</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="label_account_name">Account name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="label_passcode">Enter Passcode</string>
    <string name="toast_wrong_passcode">Wrong passcode, please try again</string>
    <string name="toast_passcode_set">Passcode set</string>
    <string name="label_confirm_passcode">Please confirm your passcode</string>
    <string name="toast_invalid_passcode_confirmation">Invalid passcode confirmation. Please try again</string>
    <string name="label_transaction_name">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_timeanddate">DATE &amp; TIME</string>
    <string name="label_account">Account</string>
    <string name="label_debit">DEBIT</string>
    <string name="label_credit">CREDIT</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="delete_account_confirmation_message">All transactions in this account will also be deleted</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Add note</string>
    <string name="menu_move">MOVE</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_account_balance">Balance:</string>
    <string name="label_export_destination">Export To:</string>
    <string name="title_export_dialog">Export Transactions</string>
    <string name="option_export_all_transactions">Export all transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="toast_export_error">Error exporting %1$s file</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete transactions after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>SD Card</item>
        <item>DropBox</item>
        <item>Google Drive</item>
        <item>Send to&#8230;</item>
    </string-array>
    <string name="btn_move">Move</string>
    <string name="title_move_transactions">Move %1$d transaction(s)</string>
    <string name="label_move_destination">Destination Account</string>
    <string name="permission_access_sdcard">Access SD Card</string>
    <string name="toast_incompatible_currency">Cannot move transactions.\nThe destination account uses a different currency from origin account</string>
    <string name="header_general_settings">General</string>
    <string name="header_about_gnucash">About</string>
    <string name="title_choose_currency">Choose default currency</string>
    <string name="title_default_currency">Default currency</string>
    <string name="summary_default_currency">Default currency to assign to new accounts</string>
    <string name="label_permission_record_transactions">Enables recording transactions in GnuCash for Android</string>
    <string name="label_permission_create_accounts">Enables creation of accounts in GnuCash for Android</string>
    <string name="label_permission_group">Your GnuCash data</string>
    <string name="description_permission_group">Read and modify GnuCash data</string>
    <string name="label_permission_record_transaction">Record transactions in GnuCash</string>
    <string name="label_permission_create_account">Create accounts in GnuCash</string>
    <string name="label_display_account">Display account</string>
    <string name="btn_create_accounts">Create Accounts</string>
    <string name="title_default_accounts">Select accounts to create</string>
    <string name="error_no_accounts">No accounts exist in GnuCash.\nCreate an account before adding a widget</string>
    <string name="title_build_version">Build version</string>
    <string name="title_license">License</string>
    <string name="summary_licence_details">Apache License v2.0. Click for details</string>
    <string name="title_general_prefs">General Preferences</string>
    <string name="label_widget_configuration">Select Account</string>
    <string name="toast_no_transactions_to_export">There are no transactions available to export</string>
    <string name="header_passcode_settings">Passcode</string>
    <string name="title_passcode_preferences">Passcode Preferences</string>
    <string name="title_passcode_enabled">Passcode Turned On</string>
    <string name="title_passcode_disabled">Passcode Turned Off</string>
    <string name="title_change_passcode">Change Passcode</string>
    <string name="title_about_gnucash">About GnuCash</string>
    <string name="summary_about_gnucash">A mobile finance management and expense-tracker designed for Android</string>
    <string name="title_about">About</string>
    <string name="toast_format_exported_to">%1$s file exported to:\n</string>
    <string name="title_export_email">GnuCash Android %1$s export</string>
    <string name="description_export_email">GnuCash Android Export from </string>
    <string name="header_transaction_settings">Transactions</string>
    <string name="title_transaction_preferences">Transaction Preferences</string>
    <string name="title_account_preferences">Account Preferences</string>
    <string name="title_default_transaction_type">Default Transaction Type</string>
    <string name="summary_default_transaction_type">The type of transaction to use by default, CREDIT or DEBIT</string>
    <string-array name="transaction_types">
        <item>CREDIT</item>
        <item>DEBIT</item>
    </string-array>
    <string name="msg_delete_all_transactions_confirmation">Are you sure you want to delete ALL transactions?</string>
    <string name="msg_delete_transaction_confirmation">Are you sure you want to delete this transaction?</string>
    <string name="title_export_preference_category">Export</string>
    <string name="title_export_all_transactions">Export all transactions</string>
    <string name="title_always_delete_exported_transactions">Delete exported transactions</string>
    <string name="title_default_export_email">Default export email</string>
    <string name="summary_default_export_email">The default email address to send exports to. You can still change this when you export.</string>
    <string name="label_double_entry_account">Transfer Account</string>
    <string name="summary_use_double_entry">All transactions will be a transfer from one account to another</string>
    <string name="title_use_double_entry">Activate Double Entry</string>
    <string name="account_balance">Balance</string>
    <string name="toast_no_account_name_entered">Enter an account name to create an account</string>
    <string name="label_account_currency">Currency</string>
    <string name="label_parent_account">Parent account</string>
    <string name="title_xml_ofx_header">Use XML OFX header</string>
    <string name="summary_xml_ofx_header">Enable this option when exporting to third-party application other than GnuCash for desktop</string>
    <string name="title_whats_new">What\'s New</string>
	<string name="whats_new">
        - New Material app design \n
        - Multi-currency transactions\n
        - Calculator to transaction amounts\n
        - Better reporting options\n
        - New help &amp; feedback section\n
        - Multiple bug fixes and improvements\n
	</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="toast_transanction_amount_required">Enter an amount to save the transaction</string>
    <string name="toast_error_edit_multi_currency_transaction">Multi-currency transactions cannot be modified</string>
    <string name="menu_import_accounts">Import GnuCash Accounts</string>
    <string name="btn_import_accounts">Import Accounts</string>
    <string name="toast_error_importing_accounts">An error occurred while importing the GnuCash accounts</string>
    <string name="toast_success_importing_accounts">GnuCash Accounts successfully imported</string>
    <string name="summary_import_accounts">Import account structure exported from GnuCash desktop</string>
    <string name="title_import_accounts">Import GnuCash XML</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as
        well.
    </string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
    <string name="header_account_settings">Accounts</string>
    <string name="toast_all_accounts_deleted">All accounts have been successfully deleted</string>
    <string name="confirm_delete_all_accounts">Are you sure you want to delete all accounts and transactions?\n\nThis
        operation cannot be undone!
    </string>
    <string name="label_account_type">Account Type</string>
    <string name="summary_delete_all_transactions">All transactions in all accounts will be deleted!</string>
    <string name="title_delete_all_transactions">Delete all transactions</string>
    <string name="toast_all_transactions_deleted">All transactions successfully deleted!</string>
    <string name="title_progress_importing_accounts">Importing accounts</string>
    <string name="toast_tap_again_to_confirm_delete">Tap again to confirm. ALL entries will be deleted!!</string>
    <string name="section_header_transactions">Transactions</string>
    <string name="section_header_subaccounts">Sub-Accounts</string>
    <string name="menu_search_accounts">Search</string>
    <string name="title_default_export_format">Default Export Format</string>
    <string name="summary_default_export_format">File format to use by default when exporting transactions</string>
    <string name="menu_export_transactions">Export transactions�c</string>
    <string name="label_recurring_transaction">Recurrence</string>
    <string name="imbalance_account_name">Imbalance</string>
    <string name="title_progress_exporting_transactions">Exporting transactions</string>
    <string name="label_no_recurring_transactions">No recurring transactions to display.</string>
    <string name="toast_recurring_transaction_deleted">Successfully deleted recurring transaction</string>
    <string name="label_placeholder_account">Placeholder account</string>
    <string name="label_default_transfer_account">Default Transfer Account</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="nav_menu_open">Open�c</string>
    <string name="nav_menu_reports">Reports</string>
    <string name="nav_menu_export">Export�c</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_scheduled_actions">Scheduled Actions</string>
    <string name="nav_menu_help"><![CDATA[Help & Feedback]]></string>
</resources>